--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">movie</string>
     <string name="title_watchlist">Watchlist</string>
+    <string name="title_favroite">Favorite Movie</string>
 </resources>
